--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "watch:sass": "node-sass sass/main.scss css/style.css -w",
-    "devserver": "live-server",
+    "devserver": "live-server --browser=firefox",
     "start": "npm-run-all --parallel devserver watch:sass",
     "compile:sass": "node-sass sass/main.scss css/style.comp.css",
     "concat:css": "concat -o css/style.concat.css css/icon-font.css css/style.comp.css",
@@ -20,7 +20,7 @@
     "concat": "^1.0.3",
     "node-sass": "^7.0.1",
     "npm-run-all": "^4.1.5",
-    "postcss-cli": "^9.1.0",
+    "postcss-cli": "^9.1.0"
   },
   "dependencies": {
     "jquery": "^3.6.0"
